# vamp-plugin-sdk

./: .appveyor.yml  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile  Makefile.in  Makefile.osx  Makefile.suncxx  README  README.compat  README.md  README_on_compatibility.md  VampExamplePlugins.vcproj  VampPluginSDK.vcproj  acinclude.m4  configure  configure.ac
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: AmplitudeFollower.cpp  AmplitudeFollower.h  FixedTempoEstimator.cpp  FixedTempoEstimator.h  Makefile  PercussionOnsetDetector.cpp  PercussionOnsetDetector.h  PowerSpectrum.cpp  SpectralCentroid.cpp  SpectralCentroid.h  ZeroCrossing.cpp  ZeroCrossing.h  plugins.cpp  vamp-example-plugins.cat  vamp-example-plugins.n3  vamp-example-plugins.rdf  vamp-example-plugins.txt  vamp-example-plugins:amplitudefollower.n3  vamp-example-plugins:percussiononsets.n3  vamp-example-plugins:spectralcentroid.n3  vamp-example-plugins:zerocrossing.n3
host/: Makefile  simplehost.cpp  system.h  test-c.c  vamp-simple-host.cpp
otherbuilds/: Doxyfile  Makefile.mingw32  Makefile.mingw64  Makefile.osx  README.msvc  VampExamplePlugins.vcxproj  VampHostSDK.sln  VampHostSDK.vcxproj  VampPluginSDK.vcxproj  VampSimpleHost.vcxproj  update-version.sh
otherbuilds/docker/: build.sh
pkgconfig/: vamp-hostsdk.pc.in  vamp-sdk.pc.in  vamp.pc.in
rdf/: README  vamp.n3  vamp.rdf
rdf/generator/: Makefile.linux  template-generator.cpp  vamp-rdf-template-generator.cpp
sdk/: Plugin.h  PluginAdapter.cpp  PluginAdapter.h  PluginBase.h  PluginHostAdapter.h
skeleton/: Makefile.inc  Makefile.linux  Makefile.mingw32  Makefile.osx  Makefile.skeleton  MyPlugin.cpp  MyPlugin.h
src/: FixedTempoEstimator.cpp  PercussionOnsetDetector.cpp  SpectralCentroid.cpp  doc-overview  plugins.cpp  vamp-simple-host.cpp
src/vamp-hostsdk/: Files.cpp  Files.h  PluginBufferingAdapter.cpp  PluginChannelAdapter.cpp  PluginHostAdapter.cpp  PluginInputDomainAdapter.cpp  PluginLoader.cpp  PluginSummarisingAdapter.cpp  PluginWrapper.cpp  RealTime.cpp  acsymbols.c  host-c.cpp
src/vamp-sdk/: FFT.cpp  FFTimpl.cpp  PluginAdapter.cpp  RealTime.cpp  acsymbols.c
test/: run-test-plugin-regression.sh  testsignal.ipynb
test/expected/: vamp-test-plugin-freq_curve-fsr-mixed.txt  vamp-test-plugin-freq_curve-fsr-timed.txt  vamp-test-plugin-freq_curve-fsr.txt  vamp-test-plugin-freq_curve-oss.txt  vamp-test-plugin-freq_curve-vsr.txt  vamp-test-plugin-freq_grid-fsr.txt  vamp-test-plugin-freq_grid-oss.txt  vamp-test-plugin-freq_input-summary.txt  vamp-test-plugin-freq_input-timestamp.txt  vamp-test-plugin-freq_instants.txt  vamp-test-plugin-freq_notes-regions.txt  vamp-test-plugin_curve-fsr-mixed.txt  vamp-test-plugin_curve-fsr-timed.txt  vamp-test-plugin_curve-fsr.txt  (+8 more)
vamp/: vamp.h  vamp.pc.in
vamp-hostsdk/: LoadRequest.h  Plugin.h  PluginBase.h  PluginBufferingAdapter.h  PluginChannelAdapter.h  PluginConfiguration.h  PluginHostAdapter.h  PluginInputDomainAdapter.h  PluginLoader.h  PluginStaticData.h  PluginSummarisingAdapter.h  PluginWrapper.h  RequestResponse.h  host-c.h  hostguard.h
vamp-sdk/: FFT.h  Plugin.h  PluginAdapter.cpp  PluginAdapter.h  PluginBase.h  PluginHostAdapter.cpp  PluginHostAdapter.h  RealTime.cpp  RealTime.h  doc-overview  libvamp-hostsdk.la.in  libvamp-sdk.la.in  plugguard.h  vamp-hostsdk.pc.in  vamp-sdk.pc.in
vestigial-manual/: bullets.html  redux.odp  vamp-bits-and-bobs.odt
(+22 files in other folders)
